# cmake-cxx-template

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Jenkinsfile  README.md  project-meta-info.in  toolchain.cmake
CMakeModules/: CompilerWarnings.cmake  Dependencies.cmake  StaticAnalyzers.cmake
ci/: Dockerfile  coverage-report.sh  docker-run.sh
src/: CMakeLists.txt  main.cpp
src/tests/: test-template.cpp
